@@ -47,7 +47,10 @@ mvn dependency:copy-dependencies
 cp target/dependency/lucene-* {GEOSERVER_HOME}/webapps/geoserver/WEB-INF/lib/
 cp target/dependency/elasticsearch-* {GEOSERVER_HOME}/webapps/geoserver/WEB-INF/lib/
 
-mvn install && cp target/elasticgeo-0.0.1-SNAPSHOT.jar ~/Downloads/geoserver-2.6.2/webapps/geoserver/WEB-INF/lib
+mvn install && cp target/elasticgeo-0.0.1-SNAPSHOT.jar {GEOSERVER_HOME}/webapps/geoserver/WEB-INF/lib
+
+export JAVA_OPTS="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 -XX:MaxPermSize=128m -Xmx1g -server" && {GEOSERVER_HOME}/bin/startup.sh
+
 
 
 
